[EDITED] Response example and readme documentation
